# kasparro-agentic-Sanju-K

./: .env  README.md  pyproject.toml  requirements.txt  run.py  setup.py  test_imports.py  test_model_access.py  verify_llm.py
docs/: projectdocumentation.md
outputs/: comparison_page.json  faq.json  product_page.json
src/: config.py  init.py  main.py
src/agents/: base.py  base_agent.py  comparison_agent.py  content_creator.py  data_processor.py  faq_agent.py  ingestion_agent.py  init.py  orchestrator.py  output_agent.py  product_b_agent.py  product_comparator.py  product_page_agent.py  question_agent.py  question_generator.py
src/core/: init.py  logic_blocks.py  models.py  state.py  templates.py  tools.py
src/orchestration/: init.py  state.py  state_fixed.py  workflow.py
src/utils/: main_agents.py  validators.py
tests/: init.py  test_agents.py  test_logic_blocks.py
